Add support for JDK 11 and 17
Summary:
In order to prepare the JDK upgrade, new builds are being added which compile and test this
project against JDK 11 and JDK 17.